force-app/main/default/objects/Case/fields/Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Type__c</fullName>
    <description>API name of the related object (Account, Loan__c, Deposit__c).</description>
    <label>Related Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>