force-app/main/default/objects/Case/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Id of the related record (18-char).</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>