force-app/main/default/objects/Case/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <description>Service category from Case_Service_Config__mdt.</description>
    <label>Service Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>